--- a/WindWingAppServer/WindWingAppServer.csproj
+++ b/WindWingAppServer/WindWingAppServer.csproj
@@ -9,4 +9,10 @@
     <PackageReference Include="MySqlConnector" Version="0.66.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="NetworkCommsDotNetComplete">
+      <HintPath>F:\BibliotekiC#\NetworkCommsDotNet\NetworkCommsDotNetComplete.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
